--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,8 @@ main {
   width: 80px;
   height: 80px;
   cursor: pointer;
+  font-size: 2rem;
+  color: white;
 }
 
 .turn {
@@ -33,4 +35,58 @@ main {
 .is-selected{
   font-weight: bold;
   background-color: rgb(0, 96, 223);
+}
+
+.winner {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  display: grid;
+  place-items: center;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.winner .text {
+  background: #111;
+  height: 300px;
+  width: 320px;
+  border: 2px solid #eee;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.winner .win {
+  margin: 0 auto;
+  width: fit-content;
+  border: 2px solid #eee;
+  border-radius: 10px;
+  display: flex;
+  gap: 15px;
+}
+
+.btnPlayAgain {
+  font-weight: bold;
+  padding: 15px;
+  border: 3px solid white;
+  border-radius: 7px;
+  font-size: 1.1rem;
+  cursor: pointer;
+}
+
+.btnResetGame {
+  margin: 10px 0;
+  font-size: 0.9rem;
+  padding: 10px;
+  font-weight: bold;
+  border: none;
+  border-radius: 7px;
+  cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.7);
+ 
 }
